fix selector font being too big

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ div {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-size: calc(10px + 2vmin);
+  font-size: 1.4rem;
   color: black;
 }
 
